--- a/source/form.html
+++ b/source/form.html
@@ -102,17 +102,17 @@
 
               <div class="evaluation__wrap">
                 <div class="evaluation__item">
-                  <input class="evaluation__radio visually-hidden" type="radio" name="eval" value="positive" id="radio-good" checked>
+                  <input class="evaluation__radio visually-hidden" type="radio" name="eval" id="radio-good" checked>
                   <label class="evaluation__label" for="radio-good">Скорее положительное</label>
                 </div>
 
                 <div class="evaluation__item">
-                  <input class="evaluation__radio visually-hidden" type="radio" name="eval" value="negative" id="radio-bad">
+                  <input class="evaluation__radio visually-hidden" type="radio" name="eval" id="radio-bad">
                   <label class="evaluation__label" for="radio-bad">Скорее отрицательное</label>
                 </div>
 
                 <div class="evaluation__item">
-                  <input class="evaluation__radio visually-hidden" type="radio" name="eval" value="neutral" id="radio-difficult">
+                  <input class="evaluation__radio visually-hidden" type="radio" name="eval" id="radio-difficult">
                   <label class="evaluation__label" for="radio-difficult">Затрудняюсь ответить</label>
                 </div>
               </div>
@@ -125,13 +125,13 @@
 
                 <div class="places__top">
                   <div class="places__item">
-                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" value="bridge" id="checkbox-1"
+                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" id="checkbox-1"
                       checked>
                     <label class="places__label" for="checkbox-1">Мост Дьявола</label>
                   </div>
 
                   <div class="places__item">
-                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" value="mountain" id="checkbox-2"
+                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" id="checkbox-2"
                       checked>
                     <label class="places__label" for="checkbox-2">Гора-Колокол</label>
                   </div>
@@ -139,13 +139,13 @@
 
                 <div class="places__bot">
                   <div class="places__item">
-                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" value="park" id="checkbox-3"
+                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" id="checkbox-3"
                       checked>
                     <label class="places__label" for="checkbox-3">Слайд-парк</label>
                   </div>
 
                   <div class="places__item">
-                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" value="rocks" id="checkbox-4">
+                    <input class="places__checkbox visually-hidden" type="checkbox" name="places" id="checkbox-4">
                     <label class="places__label" for="checkbox-4">Красные скалы</label>
                   </div>
                 </div>
