--- a/source/photo.html
+++ b/source/photo.html
@@ -86,7 +86,7 @@
                   </div>
 
                   <div class="gallery__likes">
-                    <button class="gallery__like-button" type="button" aria-label="Поставить лайк">
+                    <button class="gallery__like-button" type="submit" aria-label="Поставить лайк">
                     </button>
                     <span class="gallery__count">1350</span>
                   </div>
@@ -209,19 +209,17 @@
                 <div class="gallery-video__bar">
                 </div>
                 <div class="gallery-video__control-buttons">
-                  <button class="gallery-video__button gallery-video__button--repeat" type="button"
-                    aria-label="Проиграть сначала">
+                  <button class="gallery-video__button gallery-video__button--repeat" aria-label="Проиграть сначала">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="20">
                       <use xlink:href="#icon-video-replay"></use>
                     </svg>
                   </button>
-                  <button class="gallery-video__button gallery-video__button--subtitle" type="button"
-                    aria-label="Включить субтитры">
+                  <button class="gallery-video__button gallery-video__button--subtitle" aria-label="Включить субтитры">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="20">
                       <use xlink:href="#icon-video-subtitles"></use>
                     </svg>
                   </button>
-                  <button class="gallery-video__button gallery-video__button--full-screen" type="button"
+                  <button class="gallery-video__button gallery-video__button--full-screen"
                     aria-label="Развернуть на весь экран">
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
                       <use xlink:href="#icon-video-fullscreen"></use>
